--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
-    "primeicons": "^7.0.0",
-    "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
