--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
