--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "csv-parse": "^5.5.6",
     "file-saver": "^2.0.5",
+    "framer-motion": "^11.11.17",
     "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
